--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Praise FM - Brasil</title>
+  <title>Praise FM Brasil</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
@@ -103,7 +103,7 @@
     .live-indicator {
       display: flex;
       align-items: center;
-      gap: 6px;
+      gap: 4px; /* ✅ ajustado de 6px → 4px */
       color: #ccc;
       font-weight: 600;
       font-size: 0.9rem;
@@ -244,7 +244,7 @@
     </div>
     <div class="station-info">
       <span>Praise FM Brasil</span>
-      <!-- ⭐️ Ícone de "Ao Vivo" colado à esquerda da palavra -->
+      <!-- ⭐️ Ícone e texto mais próximos (gap: 4px) -->
       <div class="live-indicator">
         <div class="live-icon"></div>
         <span>Ao Vivo</span>
