--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
     .live-indicator {
       display: flex;
       align-items: center;
-      gap: 4px; /* ✅ ajustado de 6px → 4px */
+      gap: 8px; /* ✅ aumentado de 4px → 8px */
       color: #ccc;
       font-weight: 600;
       font-size: 0.9rem;
     }
     .live-icon {
-      width: 12px;
-      height: 12px;
+      width: 8px; /* ✅ reduzido de 12px → 8px */
+      height: 8px; /* ✅ reduzido de 12px → 8px */
       background: #ff3333;
       border-radius: 50%;
       position: relative;
@@ -127,18 +127,18 @@
       border-radius: 50%;
     }
     .live-icon::before {
-      width: 20px;
-      height: 20px;
-      left: -4px;
-      top: -4px;
+      width: 14px;
+      height: 14px;
+      left: -3px;
+      top: -3px;
       opacity: 0.6;
       animation: pulse 2.5s infinite ease-in-out;
     }
     .live-icon::after {
-      width: 28px;
-      height: 28px;
-      left: -8px;
-      top: -8px;
+      width: 20px;
+      height: 20px;
+      left: -6px;
+      top: -6px;
       opacity: 0.3;
       animation: pulse 2.5s infinite ease-in-out;
     }
@@ -244,7 +244,7 @@
     </div>
     <div class="station-info">
       <span>Praise FM Brasil</span>
-      <!-- ⭐️ Ícone e texto mais próximos (gap: 4px) -->
+      <!-- ⭐️ Ícone menor + espaçamento maior -->
       <div class="live-indicator">
         <div class="live-icon"></div>
         <span>Ao Vivo</span>
