--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
 
   <script>
     // 🔑 Configurações
-    const STREAM_URL = 'https://stream.zeno.fm/hvwifp8ezc6tv'; // Substitua pelo seu stream do Brasil
-    const NOWPLAYING_API = 'https://api.zeno.fm/mounts/metadata/subscribe/hvwifp8ezc6tv'; // Substitua pelo seu mount
+    const STREAM_URL = 'https://stream.zeno.fm/olisuxy9v3vtv'; // ✅ Seu stream do Brasil
+    const NOWPLAYING_API = 'https://api.zeno.fm/mounts/metadata/subscribe/olisuxy9v3vtv'; // ✅ API do seu mount
     const LASTFM_API_KEY = '3ce134e4f02accfff4367ada927e6dcd';
     const player = document.getElementById('radioPlayer');
     const playBtn = document.getElementById('playBtn');
